added cytoscape 3.0 JNLP launch

--- a/resources/jnlp/index.html
+++ b/resources/jnlp/index.html
@@ -8,15 +8,21 @@
     <title>SDP Cytoscape Distribution</title>
   </head>
   <body>
-    <h3>Cytoscape Distribution</h3>
+    <h3>Cytoscape 2.8 Distribution</h3>
     <p>
-      This launches a separate Cytoscape application with the SDP plugins
-      installed.
+      This launches a separate Cytoscape 2.8 application with the SDP plugins installed.
     </p>
     <a href="cytoscape.jnlp">
       <img src="http://java.com/js/webstart.png" border="0" alt="Launch Cytoscape Distribution" />
     </a>
     <br/>
+    <h3>Cytoscape 3.0 Distribution</h3>
+    <p>
+      This launches a separate Cytoscape 3.0 application with the SDP plugins installed.
+    </p>
+    <a href="sdp-cytoscape3.jnlp">
+      <img src="http://java.com/js/webstart.png" border="0" alt="Launch Cytoscape Distribution" />
+    </a>
     <br/>
     <h3>SDP Plugins - Manual Installation</h3>
     <p>
@@ -26,6 +32,7 @@
     <ul>
       <li><a href="plugins.xml">Plugin site</a></li>
       <li><a href="manual_installation.html">Installation Instructions</a></li>
+    </ul>
   </body>
 </html>
 
