packaging update; java security, 1.7.0_51
declare app name, codebase, and permission to MANIFEST.MF

embed filtered jnlp file in jar -> JNLP-INF/APPLICATION.JNLP

use a timestamp authority that is compatible with java keystore

--- a/resources/jnlp/index.html
+++ b/resources/jnlp/index.html
@@ -13,7 +13,7 @@
       This launches a separate Cytoscape application with the SDP plugins
       installed.
     </p>
-    <a href="cytoscape.jnlp">
+    <a href="cytoscape3.jnlp">
       <img src="http://java.com/js/webstart.png" border="0" alt="Launch Cytoscape Distribution" />
     </a>
     <br/>
